k8s/mongodb-depl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: order-db
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-db
  serviceName: order-db-svc
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: data
          mountPath: /data/db
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: order-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: order-db-svc
spec:
  clusterIP: None
  selector:
    app: order-db
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
